# nvidia-arch-setup

./: .clang-format  CLAUDE.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md
src/: main.cpp
src/core/: runner.cpp  runner.h  runner.hpp  step.h  step.hpp  system_info.cpp  system_info.h  system_info.hpp  utils.cpp  utils.h  utils.hpp
src/steps/: driver_install.cpp  driver_install.h  driver_install.hpp  kernel_params.cpp  kernel_params.h  kernel_params.hpp  mkinitcpio.cpp  mkinitcpio.h  mkinitcpio.hpp  optimus.cpp  optimus.h  optimus.hpp  pacman_hook.cpp  pacman_hook.h  pacman_hook.hpp  suspend.cpp  suspend.h  suspend.hpp
